# openpower-occ-control

./: .gitignore  MAINTAINERS  Makefile.am  OWNERS  README.md  app.cpp  bootstrap.sh  configure.ac  configure~  elog-errors.hpp  enable-pldm.mk  file.hpp  groups  i2c_occ.cpp  i2c_occ.hpp  meson.build  meson.options  meson_options.txt  occ-active.sh  occ_bus.cpp  occ_bus.hpp  occ_command.cpp  occ_command.hpp  occ_dbus.cpp  occ_dbus.hpp  occ_device.cpp  occ_device.hpp  occ_errors.cpp  occ_errors.hpp  occ_events.hpp  occ_ffdc.cpp  occ_ffdc.hpp  occ_finder.cpp  occ_finder.hpp  occ_manager.cpp  occ_manager.hpp  occ_pass_through.cpp  occ_pass_through.hpp  occ_perfmode.cpp  occ_perfmode.hpp  (+24 more)
example/: occ_sensor.yaml
legacy/: occ_device_legacy.cpp  occ_device_legacy.hpp  occ_manager_legacy.cpp  occ_manager_legacy.hpp  occ_pass_through_legacy.cpp  occ_pass_through_legacy.hpp  occ_status_legacy.cpp  occ_status_legacy.hpp
org/open_power/OCC/: Device.errors.yaml  Device.metadata.yaml  PassThrough.errors.yaml  PassThrough.metadata.yaml
org/open_power/OCC/PassThrough/: error.cpp  error.hpp
service_files/: meson.build  org.open_power.OCC.Control.service
status/: Makefile.am  app.cpp  occ_status.hpp
test/: Makefile.am  TestI2cOcc.cpp  TestUtils.cpp  enable-pldm-utest.mk  error_files_tests.cpp  error_readfile_race_test.cpp  meson.build  occ_dbus_test.cpp  occ_reset_test.cpp  occ_reset_test.hpp  utest.cpp
