option('tests', type: 'feature', description: 'Build tests')

option(
    'max-cpus',
    type: 'integer',
    min: 0,
    max: 255,
    description: 'Maximum number of CPUs',
    value: 2,
)

option(
    'ps-derating-factor',
    type: 'integer',
    min: 0,
    max: 100,
    description: 'Power supply derating factor',
    value: 90,
)

option(
    'yamldir',
    type: 'string',
    description: 'The path to the yaml config files',
)

option(
    'op_dump_obj_path',
    type: 'string',
    value: '/org/openpower/dump',
    description: 'Object path requesting OpenPOWER dumps',
)

option(
    'transport-implementation',
    type: 'combo',
    choices: ['mctp-demux', 'af-mctp'],
    description: 'transport via af-mctp or mctp-demux',
)

option(
    'phal-support',
    type: 'feature',
    description: 'Enable PHAL support',
    value: 'disabled',
)

