option('tests', type : 'feature', description : 'Build tests')
option('install-error-yaml', type : 'feature', description : 'Enable installing error yaml file', value: 'disabled')
option('i2c-occ', type : 'feature', description : 'Enable I2C OCC support', value: 'enabled')
option('read-occ-sensors', type : 'feature', description : 'Enable read occ sensors support', value: 'enabled')
option('with-host-communication-protocol', type : 'string', description : 'To specify the host communication protocol', value: 'pldm')
option('power10-support', type : 'feature', description : 'Enable Power10 support', value: 'enabled')
option('yamldir', type : 'string', description : 'Enable Power10 support')